spacing, fixed nav

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -9,8 +10,23 @@ body {
   overflow-x: hidden;
 }
 
-.navgiation {
+main {
+  margin-top: 100px;
+}
+
+.navigation {
   float: none;
+  padding: 20px;
+}
+.fixed {
+  position: fixed;
+  z-index: 1;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  margin-bottom: 40px;
 }
 
 .title {
@@ -754,6 +770,13 @@ footer {
 
   h4.nav {
     font-size: unset;
+  }
+
+  .fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
   }
 
   .flex-item {
